libs/sdk-flutter/ios/Classes/frb_generated.h

typedef struct wire_cst_list_prim_u_8_strict {
  uint8_t *ptr;
  int32_t len;
} wire_cst_list_prim_u_8_strict;
typedef struct wire_cst_opening_fee_params {
  uint64_t min_msat;
  uint32_t proportional;
  struct wire_cst_list_prim_u_8_strict *valid_until;
  uint32_t max_idle_time;
  uint32_t max_client_to_self_delay;
  struct wire_cst_list_prim_u_8_strict *promise;
} wire_cst_opening_fee_params;
typedef struct wire_cst_greenlight_credentials {
  struct wire_cst_list_prim_u_8_strict *device_key;
  struct wire_cst_list_prim_u_8_strict *device_cert;
} wire_cst_greenlight_credentials;
typedef union AesSuccessActionDataResultKind {
  struct wire_cst_AesSuccessActionDataResult_Decrypted Decrypted;
  struct wire_cst_AesSuccessActionDataResult_ErrorStatus ErrorStatus;
} AesSuccessActionDataResultKind;
typedef struct wire_cst_aes_success_action_data_result {
  int32_t tag;
  union AesSuccessActionDataResultKind kind;
} wire_cst_aes_success_action_data_result;
typedef struct wire_cst_closed_channel_payment_details {
  int32_t state;
  struct wire_cst_list_prim_u_8_strict *funding_txid;
  struct wire_cst_list_prim_u_8_strict *short_channel_id;
  struct wire_cst_list_prim_u_8_strict *closing_txid;
} wire_cst_closed_channel_payment_details;
typedef struct wire_cst_SuccessActionProcessed_Aes {
  struct wire_cst_aes_success_action_data_result *result;
} wire_cst_SuccessActionProcessed_Aes;
typedef struct wire_cst_message_success_action_data {
  struct wire_cst_list_prim_u_8_strict *message;
} wire_cst_message_success_action_data;
typedef struct wire_cst_SuccessActionProcessed_Message {
  struct wire_cst_message_success_action_data *data;
} wire_cst_SuccessActionProcessed_Message;
typedef struct wire_cst_url_success_action_data {
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *url;
} wire_cst_url_success_action_data;
typedef struct wire_cst_SuccessActionProcessed_Url {
  struct wire_cst_url_success_action_data *data;
} wire_cst_SuccessActionProcessed_Url;
typedef union SuccessActionProcessedKind {
  struct wire_cst_SuccessActionProcessed_Aes Aes;
  struct wire_cst_SuccessActionProcessed_Message Message;
  struct wire_cst_SuccessActionProcessed_Url Url;
} SuccessActionProcessedKind;
typedef struct wire_cst_success_action_processed {
  int32_t tag;
  union SuccessActionProcessedKind kind;
} wire_cst_success_action_processed;
typedef struct wire_cst_list_String {
  struct wire_cst_list_prim_u_8_strict **ptr;
  int32_t len;
} wire_cst_list_String;
typedef struct wire_cst_swap_info {
  struct wire_cst_list_prim_u_8_strict *bitcoin_address;
  int64_t created_at;
  int64_t lock_height;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *preimage;
  struct wire_cst_list_prim_u_8_strict *private_key;
  struct wire_cst_list_prim_u_8_strict *public_key;
  struct wire_cst_list_prim_u_8_strict *swapper_public_key;
  struct wire_cst_list_prim_u_8_strict *script;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  uint64_t paid_msat;
  uint64_t total_incoming_txs;
  uint64_t confirmed_sats;
  uint64_t unconfirmed_sats;
  int32_t status;
  struct wire_cst_list_String *refund_tx_ids;
  struct wire_cst_list_String *unconfirmed_tx_ids;
  struct wire_cst_list_String *confirmed_tx_ids;
  int64_t min_allowed_deposit;
  int64_t max_allowed_deposit;
  int64_t max_swapper_payable;
  struct wire_cst_list_prim_u_8_strict *last_redeem_error;
  struct wire_cst_opening_fee_params *channel_opening_fees;
  uint32_t *confirmed_at;
} wire_cst_swap_info;
typedef struct wire_cst_reverse_swap_info {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *claim_pubkey;
  struct wire_cst_list_prim_u_8_strict *lockup_txid;
  struct wire_cst_list_prim_u_8_strict *claim_txid;
  uint64_t onchain_amount_sat;
  int32_t status;
} wire_cst_reverse_swap_info;
typedef struct wire_cst_ln_payment_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *label;
  struct wire_cst_list_prim_u_8_strict *destination_pubkey;
  struct wire_cst_list_prim_u_8_strict *payment_preimage;
  bool keysend;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  struct wire_cst_list_prim_u_8_strict *open_channel_bolt11;
  struct wire_cst_success_action_processed *lnurl_success_action;
  struct wire_cst_list_prim_u_8_strict *lnurl_pay_domain;
  struct wire_cst_list_prim_u_8_strict *ln_address;
  struct wire_cst_list_prim_u_8_strict *lnurl_metadata;
  struct wire_cst_list_prim_u_8_strict *lnurl_withdraw_endpoint;
  struct wire_cst_swap_info *swap_info;
  struct wire_cst_reverse_swap_info *reverse_swap_info;
  uint32_t *pending_expiration_block;
} wire_cst_ln_payment_details;
typedef struct wire_cst_PaymentDetails_Ln {
  struct wire_cst_ln_payment_details *data;
} wire_cst_PaymentDetails_Ln;
typedef struct wire_cst_PaymentDetails_ClosedChannel {
  struct wire_cst_closed_channel_payment_details *data;
} wire_cst_PaymentDetails_ClosedChannel;
typedef union PaymentDetailsKind {
  struct wire_cst_PaymentDetails_Ln Ln;
  struct wire_cst_PaymentDetails_ClosedChannel ClosedChannel;
} PaymentDetailsKind;
typedef struct wire_cst_payment_details {
  int32_t tag;
  union PaymentDetailsKind kind;
} wire_cst_payment_details;
typedef struct wire_cst_payment {
  struct wire_cst_list_prim_u_8_strict *id;
  int32_t payment_type;
  int64_t payment_time;
  uint64_t amount_msat;
  uint64_t fee_msat;
  int32_t status;
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_payment_details details;
  struct wire_cst_list_prim_u_8_strict *metadata;
} wire_cst_payment;
typedef struct wire_cst_invoice_paid_details {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *bolt11;
  struct wire_cst_payment *payment;
} wire_cst_invoice_paid_details;
typedef struct wire_cst_route_hint_hop {
  struct wire_cst_list_prim_u_8_strict *src_node_id;
  uint64_t short_channel_id;
  uint32_t fees_base_msat;
  uint32_t fees_proportional_millionths;
  uint64_t cltv_expiry_delta;
  uint64_t *htlc_minimum_msat;
  uint64_t *htlc_maximum_msat;
} wire_cst_route_hint_hop;
typedef struct wire_cst_list_route_hint_hop {
  struct wire_cst_route_hint_hop *ptr;
  int32_t len;
} wire_cst_list_route_hint_hop;
typedef struct wire_cst_route_hint {
  struct wire_cst_list_route_hint_hop *hops;
} wire_cst_route_hint;
typedef struct wire_cst_list_route_hint {
  struct wire_cst_route_hint *ptr;
  int32_t len;
} wire_cst_list_route_hint;
typedef struct wire_cst_ln_invoice {
  struct wire_cst_list_prim_u_8_strict *bolt11;
  int32_t network;
  struct wire_cst_list_prim_u_8_strict *payee_pubkey;
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *description;
  struct wire_cst_list_prim_u_8_strict *description_hash;
  uint64_t *amount_msat;
  uint64_t timestamp;
  uint64_t expiry;
  struct wire_cst_list_route_hint *routing_hints;
  struct wire_cst_list_prim_u_8_strict *payment_secret;
  uint64_t min_final_cltv_expiry_delta;
} wire_cst_ln_invoice;
typedef struct wire_cst_ln_url_error_data {
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_ln_url_error_data;
typedef struct wire_cst_ln_url_pay_error_data {
  struct wire_cst_list_prim_u_8_strict *payment_hash;
  struct wire_cst_list_prim_u_8_strict *reason;
} wire_cst_ln_url_pay_error_data;
typedef struct wire_cst_ln_url_pay_success_data {
  struct wire_cst_payment payment;
  struct wire_cst_success_action_processed *success_action;
} wire_cst_ln_url_pay_success_data;
typedef struct wire_cst_ln_url_withdraw_success_data {
  struct wire_cst_ln_invoice invoice;
} wire_cst_ln_url_withdraw_success_data;
typedef struct wire_cst_list_opening_fee_params {
  struct wire_cst_opening_fee_params *ptr;
  int32_t len;
} wire_cst_list_opening_fee_params;
typedef struct wire_cst_opening_fee_params_menu {
  struct wire_cst_list_opening_fee_params *values;
} wire_cst_opening_fee_params_menu;
typedef struct wire_cst_lsp_information {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_list_prim_u_8_strict *name;
  struct wire_cst_list_prim_u_8_strict *widget_url;
  struct wire_cst_list_prim_u_8_strict *pubkey;
  struct wire_cst_list_prim_u_8_strict *host;
  int64_t base_fee_msat;
  double fee_rate;
  uint32_t time_lock_delta;
  int64_t min_htlc_msat;
  struct wire_cst_list_prim_u_8_strict *lsp_pubkey;
  struct wire_cst_opening_fee_params_menu opening_fee_params_list;
} wire_cst_lsp_information;
typedef struct wire_cst_NodeCredentials_Greenlight {
  struct wire_cst_greenlight_credentials *credentials;
} wire_cst_NodeCredentials_Greenlight;
typedef union NodeCredentialsKind {
  struct wire_cst_NodeCredentials_Greenlight Greenlight;
} NodeCredentialsKind;
typedef struct wire_cst_node_credentials {
  int32_t tag;
  union NodeCredentialsKind kind;
} wire_cst_node_credentials;
typedef struct wire_cst_payment_failed_data {
  struct wire_cst_list_prim_u_8_strict *error;
  struct wire_cst_list_prim_u_8_strict *node_id;
  struct wire_cst_ln_invoice *invoice;
} wire_cst_payment_failed_data;
typedef struct wire_cst_symbol {
  struct wire_cst_list_prim_u_8_strict *grapheme;
  struct wire_cst_list_prim_u_8_strict *template;
  bool *rtl;
  uint32_t *position;
} wire_cst_symbol;
typedef struct wire_cst_localized_name {
  struct wire_cst_list_prim_u_8_strict *locale;
  struct wire_cst_list_prim_u_8_strict *name;
} wire_cst_localized_name;
typedef struct wire_cst_list_localized_name {
  struct wire_cst_localized_name *ptr;
  int32_t len;
} wire_cst_list_localized_name;
typedef struct wire_cst_locale_overrides {
  struct wire_cst_list_prim_u_8_strict *locale;
  uint32_t *spacing;
  struct wire_cst_symbol symbol;
} wire_cst_locale_overrides;
typedef struct wire_cst_list_locale_overrides {
  struct wire_cst_locale_overrides *ptr;
  int32_t len;
} wire_cst_list_locale_overrides;
typedef struct wire_cst_currency_info {
  struct wire_cst_list_prim_u_8_strict *name;
  uint32_t fraction_size;
  uint32_t *spacing;
  struct wire_cst_symbol *symbol;
  struct wire_cst_symbol *uniq_symbol;
  struct wire_cst_list_localized_name *localized_name;
  struct wire_cst_list_locale_overrides *locale_overrides;
} wire_cst_currency_info;
typedef struct wire_cst_fiat_currency {
  struct wire_cst_list_prim_u_8_strict *id;
  struct wire_cst_currency_info info;
} wire_cst_fiat_currency;
typedef struct wire_cst_list_fiat_currency {
  struct wire_cst_fiat_currency *ptr;
  int32_t len;
} wire_cst_list_fiat_currency;
typedef struct wire_cst_list_lsp_information {
  struct wire_cst_lsp_information *ptr;
  int32_t len;
} wire_cst_list_lsp_information;