libs/sdk-flutter/lib/breez_sdk_core_bindings_generated.dart


  external ffi.Pointer<wire_cst_list_prim_u_8_strict> message;
}

final class wire_cst_closed_channel_payment_details extends ffi.Struct {
  @ffi.Int32()
  external int state;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> funding_txid;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> short_channel_id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> closing_txid;
}

final class wire_cst_SuccessActionProcessed_Aes extends ffi.Struct {
  external ffi.Pointer<wire_cst_aes_success_action_data_result> result;
}

final class wire_cst_message_success_action_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> message;
}

final class wire_cst_SuccessActionProcessed_Message extends ffi.Struct {
  external ffi.Pointer<wire_cst_message_success_action_data> data;
}

final class wire_cst_url_success_action_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> url;
}

final class wire_cst_SuccessActionProcessed_Url extends ffi.Struct {
  external ffi.Pointer<wire_cst_url_success_action_data> data;
}

final class SuccessActionProcessedKind extends ffi.Union {
  external wire_cst_SuccessActionProcessed_Aes Aes;

  external wire_cst_SuccessActionProcessed_Message Message;

  external wire_cst_SuccessActionProcessed_Url Url;
}

final class wire_cst_success_action_processed extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external SuccessActionProcessedKind kind;
}

final class wire_cst_list_String extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_cst_list_prim_u_8_strict>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_swap_info extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bitcoin_address;

  @ffi.Int64()
  external int created_at;

  @ffi.Int64()
  external int lock_height;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> preimage;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> private_key;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> public_key;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> swapper_public_key;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> script;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bolt11;

  @ffi.Uint64()
  external int paid_msat;

  @ffi.Uint64()
  external int total_incoming_txs;

  @ffi.Uint64()
  external int confirmed_sats;

  @ffi.Uint64()
  external int unconfirmed_sats;

  @ffi.Int32()
  external int status;

  external ffi.Pointer<wire_cst_list_String> refund_tx_ids;

  external ffi.Pointer<wire_cst_list_String> unconfirmed_tx_ids;

  external ffi.Pointer<wire_cst_list_String> confirmed_tx_ids;

  @ffi.Int64()
  external int min_allowed_deposit;

  @ffi.Int64()
  external int max_allowed_deposit;

  @ffi.Int64()
  external int max_swapper_payable;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> last_redeem_error;

  external ffi.Pointer<wire_cst_opening_fee_params> channel_opening_fees;

  external ffi.Pointer<ffi.Uint32> confirmed_at;
}

final class wire_cst_reverse_swap_info extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> claim_pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lockup_txid;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> claim_txid;

  @ffi.Uint64()
  external int onchain_amount_sat;

  @ffi.Int32()
  external int status;
}

final class wire_cst_ln_payment_details extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> label;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> destination_pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_preimage;

  @ffi.Bool()
  external bool keysend;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bolt11;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> open_channel_bolt11;

  external ffi.Pointer<wire_cst_success_action_processed> lnurl_success_action;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lnurl_pay_domain;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lnurl_pay_comment;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> ln_address;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lnurl_metadata;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lnurl_withdraw_endpoint;

  external ffi.Pointer<wire_cst_swap_info> swap_info;

  external ffi.Pointer<wire_cst_reverse_swap_info> reverse_swap_info;

  external ffi.Pointer<ffi.Uint32> pending_expiration_block;
}

final class wire_cst_PaymentDetails_Ln extends ffi.Struct {
  external ffi.Pointer<wire_cst_ln_payment_details> data;
}

final class wire_cst_PaymentDetails_ClosedChannel extends ffi.Struct {
  external ffi.Pointer<wire_cst_closed_channel_payment_details> data;
}

final class PaymentDetailsKind extends ffi.Union {
  external wire_cst_PaymentDetails_Ln Ln;

  external wire_cst_PaymentDetails_ClosedChannel ClosedChannel;
}

final class wire_cst_payment_details extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external PaymentDetailsKind kind;
}

final class wire_cst_payment extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  @ffi.Int32()
  external int payment_type;

  @ffi.Int64()
  external int payment_time;

  @ffi.Uint64()
  external int amount_msat;

  @ffi.Uint64()
  external int fee_msat;

  @ffi.Int32()
  external int status;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  external wire_cst_payment_details details;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> metadata;
}

final class wire_cst_invoice_paid_details extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bolt11;

  external ffi.Pointer<wire_cst_payment> payment;
}

final class wire_cst_route_hint_hop extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> src_node_id;

  @ffi.Uint64()
  external int short_channel_id;

  @ffi.Uint32()
  external int fees_base_msat;

  @ffi.Uint32()
  external int fees_proportional_millionths;

  @ffi.Uint64()
  external int cltv_expiry_delta;

  external ffi.Pointer<ffi.Uint64> htlc_minimum_msat;

  external ffi.Pointer<ffi.Uint64> htlc_maximum_msat;
}

final class wire_cst_list_route_hint_hop extends ffi.Struct {
  external ffi.Pointer<wire_cst_route_hint_hop> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_route_hint extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_route_hint_hop> hops;
}

final class wire_cst_list_route_hint extends ffi.Struct {
  external ffi.Pointer<wire_cst_route_hint> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_ln_invoice extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> bolt11;

  @ffi.Int32()
  external int network;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payee_pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> description_hash;

  external ffi.Pointer<ffi.Uint64> amount_msat;

  @ffi.Uint64()
  external int timestamp;

  @ffi.Uint64()
  external int expiry;

  external ffi.Pointer<wire_cst_list_route_hint> routing_hints;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_secret;

  @ffi.Uint64()
  external int min_final_cltv_expiry_delta;
}

final class wire_cst_ln_url_error_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> reason;
}

final class wire_cst_ln_url_pay_error_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> payment_hash;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> reason;
}

final class wire_cst_ln_url_pay_success_data extends ffi.Struct {
  external wire_cst_payment payment;

  external ffi.Pointer<wire_cst_success_action_processed> success_action;
}

final class wire_cst_ln_url_withdraw_success_data extends ffi.Struct {
  external wire_cst_ln_invoice invoice;
}

final class wire_cst_list_opening_fee_params extends ffi.Struct {
  external ffi.Pointer<wire_cst_opening_fee_params> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_opening_fee_params_menu extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_opening_fee_params> values;
}

final class wire_cst_lsp_information extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> widget_url;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> pubkey;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> host;

  @ffi.Int64()
  external int base_fee_msat;

  @ffi.Double()
  external double fee_rate;

  @ffi.Uint32()
  external int time_lock_delta;

  @ffi.Int64()
  external int min_htlc_msat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> lsp_pubkey;

  external wire_cst_opening_fee_params_menu opening_fee_params_list;
}

final class wire_cst_NodeCredentials_Greenlight extends ffi.Struct {
  external ffi.Pointer<wire_cst_greenlight_credentials> credentials;
}

final class NodeCredentialsKind extends ffi.Union {
  external wire_cst_NodeCredentials_Greenlight Greenlight;
}

final class wire_cst_node_credentials extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external NodeCredentialsKind kind;
}

final class wire_cst_payment_failed_data extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> error;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> node_id;

  external ffi.Pointer<wire_cst_ln_invoice> invoice;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> label;
}

final class wire_cst_symbol extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> grapheme;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> template_;

  external ffi.Pointer<ffi.Bool> rtl;

  external ffi.Pointer<ffi.Uint32> position;
}

final class wire_cst_localized_name extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> locale;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;
}

final class wire_cst_list_localized_name extends ffi.Struct {
  external ffi.Pointer<wire_cst_localized_name> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_locale_overrides extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> locale;

  external ffi.Pointer<ffi.Uint32> spacing;

  external wire_cst_symbol symbol;
}

final class wire_cst_list_locale_overrides extends ffi.Struct {
  external ffi.Pointer<wire_cst_locale_overrides> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_currency_info extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> name;

  @ffi.Uint32()
  external int fraction_size;

  external ffi.Pointer<ffi.Uint32> spacing;

  external ffi.Pointer<wire_cst_symbol> symbol;

  external ffi.Pointer<wire_cst_symbol> uniq_symbol;

  external ffi.Pointer<wire_cst_list_localized_name> localized_name;

  external ffi.Pointer<wire_cst_list_locale_overrides> locale_overrides;
}

final class wire_cst_fiat_currency extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external wire_cst_currency_info info;
}

final class wire_cst_list_fiat_currency extends ffi.Struct {
  external ffi.Pointer<wire_cst_fiat_currency> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_list_lsp_information extends ffi.Struct {
  external ffi.Pointer<wire_cst_lsp_information> ptr;

  @ffi.Int32()
  external int len;
}
